--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "foundation-sites": "^6.5.0-rc.2",
     "graphql": "^0.13.2",
     "json-server": "^0.14.0",
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "rc-slider": "^8.6.1",
     "react": "^16.4.1",
@@ -23,8 +25,12 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "json-server": "json-server --watch --port 5000 db.json",
