--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "staffing",
   "version": "0.1.0",
-  "homepage": "http://janrembold.github.io/staffing",
+  "homepage": "https://janrembold.github.io/staffing",
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.14",
