--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "staffing",
   "version": "0.1.0",
-  "homepage": "https://janrembold.github.io/staffing",
+  "homepage": "https://janrembold.github.io/staffing/",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.14",
-    "apollo-server": "^2.0.4",
     "axios": "^0.18.0",
     "foundation-sites": "^6.5.0-rc.2",
-    "graphql": "^0.13.2",
     "json-server": "^0.14.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "rc-slider": "^8.6.1",
     "react": "^16.4.1",
-    "react-apollo": "^2.1.11",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
@@ -35,7 +31,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "json-server": "json-server --watch --port 5000 db.json",
-    "server": "node src/server/index.js",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
