--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "rc-slider": "^8.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-idle-timer": "^4.0.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
