--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "foundation-sites": "^6.5.0-rc.2",
     "json-server": "^0.14.0",
+    "lodash.merge": "^4.6.1",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
